2000-06-19  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-file): Don't produce
	charset=x-unknown.

2000-06-19  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.7 is released.

2000-06-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-file): Make it work with Emacs.

2000-06-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-text-file): New function.
	(mime-file-types): Treat .htm as an HTML file.

2000-06-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-user-agent-field): Defcustom.
	(mime-edit-mime-version-field-for-message/partial): Removed.
	(mime-edit-mime-partial-header): Use mime-edit-mime-version-value.
	(mime-edit-insert-binary-string): New function.
	(mime-edit-insert-file): Use it.
	(mime-edit-set-parameter): Avoid duplicating same parameters.

2000-06-15  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mail-mime-setup.el: Don't touch mail-signature.
	* semi-setup.el (mime-setup-enable-inline-image): Don't check
	window-system under XEmacs.
	* semi-def.el (select-menu-alist): Use device-on-window-system-p
	under XEmacs.

2000-06-14  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-unbuttonize): Remove invisible text
	following XPM buttons.
	* semi-def.el (mime-create-xpm-buttton): Make an extent start-open.
	Put mime-button text-property for buttonize and unbuttonize.

2000-06-13  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-transfer-level): Defcustomize.
	(mime-edit-mime-version-field-for-message/partial):
	Add an accidentally removed newline.

2000-06-07  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-yank-ignored-field-regexp): Removed.
	(mime-edit-yank-ignored-field-list): Make this customizable.

2000-06-09   Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-edit-insert-key): Insert a text tag when
	the buffer has any trailing text.

2000-06-05  Shugo Maeda <shugo@ruby-lang.org>
